fixing footer alignment

--- a/bountiful-foods/styles/base.css
+++ b/bountiful-foods/styles/base.css
@@ -417,7 +417,7 @@ footer {
 .footer-logo {
   width: 100px;
   height: auto;
-  margin: 0 auto;
+  margin: 15px auto;
 }
 
 .map-link {
